<resources>
    <string name="app_name">Animated Bottom Bar</string>
    <string name="webill">WeBill</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="last_step_nplease_add_a_card">Last step!\nPlease add a card.</string>
    <string name="add_card">Add Card</string>
    <string name="your_result_will_be_here">Your Result Will Be Here</string>
    <string name="ai_receipt_scanner">AI Receipt Scanner</string>
    <string name="activity_name">Activity Name</string>
    <string name="total_amount">Total Amount</string>
    <string name="date">Date</string>
    <string name="address">Address</string>
    <string name="next">Next</string>
    <string name="hey_webill">Hey WeBill</string>
    <string name="save">Save</string>
    <string name="bill_conclusion">Bill Conclusion</string>
    <string name="total">Total: $</string>
    <string name="paid_by">Paid By:</string>
    <string name="default_username">Default Username</string>
    <string name="split_with">Split With:</string>
    <string name="remain">Remain: $</string>
    <string name="items">Items</string>
    <string name="hello_user_nthanks_for_signing_up_nthere_s_just_one_more_step">Hello {user}!\nThanks for signing up.\nThere\'s just one more step.</string>
    <string name="ok">OK</string>
    <string name="balance">Balance: $</string>
    <string name="bill_amount">Bill Amount: $</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="reset_password">Reset Password</string>
    <string name="modify_mobile_number">Modify Mobile Number</string>
    <string name="contact_us">Contact Us</string>
    <string name="made_with_team_blue_bu_cs501">Made with :) Team Blue @ BU CS501</string>
    <string name="log_out">Log Out</string>
    <string name="add_new_bill">Add New Bill</string>
    <string name="scan">Scan</string>
    <string name="bill_information">Bill Information</string>
    <string name="activity_name2">Activity Name</string>
    <string name="total_amount2">Total Amount</string>
    <string name="address2">Address</string>
    <string name="enter">Enter</string>
    <string name="friends">Friends</string>
    <string name="add_friends">+ Add Friends</string>
    <string name="my_balance">My Balance:$</string>
    <string name="to_pay">To Pay: $</string>
    <string name="to_take_back">To Take Back: $</string>
    <string name="here_s_your_friends_status">Here\'s your Friends status:</string>
    <string name="my_bills">My Bills</string>
    <string name="activity2">Activity</string>
    <string name="username_add">Username</string>
    <string name="amount_split">Amount</string>
    <string name="bill_item_details">Bill Item Details</string>
    <string name="item_name">Item Name</string>
    <string name="quantity_item">Quantity</string>
    <string name="total_item">Total</string>
    <string name="choose_your_profile_picture">Choose Your Profile Picture</string>
    <string name="your_new_username">Your New Username</string>
    <string name="bill_amount2">Bill Amount: $</string>
    <string name="username_s">Username</string>
    <string name="email_s">Email</string>
    <string name="password_s">Password</string>
    <string name="phone_s">Phone</string>
    <string name="address_s">Address</string>
    <string name="gender_s">Gender</string>
    <string name="register_s">Register</string>
    <string name="friends_m">Friends</string>
    <string name="my_bills_m">My Bills</string>
    <string name="add_bills_m">Add Bills</string>
    <string name="activity_m">Activity</string>
    <string name="account_m">Account</string>


    <string-array name="years">
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
        <item>2031</item>
        <item>2032</item>
        <item>2033</item>
        <item>2034</item>
        <item>2035</item>
        <item>2036</item>
        <item>2037</item>
        <item>2038</item>
        <item>2039</item>
        <item>2040</item>
        <item>2041</item>
        <item>2042</item>
        <item>2043</item>
        <item>2044</item>
        <item>2045</item>
        <item>2046</item>
        <item>2047</item>
        <item>2048</item>
        <item>2049</item>
        <item>2050</item>

    </string-array>

</resources>
