<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/friends"
        android:icon="@drawable/friends"
        android:title="@string/friends_m" />

    <item
        android:id="@+id/receipt"
        android:icon="@drawable/invoice"
        android:title="@string/my_bills_m" />

    <item
        android:id="@+id/addbills"
        android:icon="@drawable/plus"
        android:title="@string/add_bills_m" />

    <item
        android:id="@+id/spendingactivity"
        android:icon="@drawable/worldwide"
        android:title="@string/activity_m" />

    <item
        android:id="@+id/account"
        android:icon="@drawable/user"
        android:title="@string/account_m" />
</menu>